syntax = "proto3";

package api.v1.mysql;

option go_package = "github.com/asjard/examples/protobuf/mysqlpb";

import "github.com/asjard/protobuf/http.proto";
import "google/protobuf/empty.proto";

service Mysql {
    option (asjard.api.serviceHttp) = {
        group : "examples/mysql"
    };
    // 创建
    rpc Create(CreateOrUpdateReq) returns (google.protobuf.Empty) {
        option (asjard.api.http) = {
            post : "/"
        };
    };
    // 更新
    rpc Update(CreateOrUpdateReq) returns (ExampleInfo) {
        option (asjard.api.http) = {
            put : "/{name}"
        };
    };
    // 获取详情
    rpc Get(ReqWithName) returns (ExampleInfo) {
        option (asjard.api.http) = {
            get : "/{name}"
        };
    };
    // 查询
    rpc Search(SearchReq) returns (ExampleList) {
        option (asjard.api.http) = {
            get : "/"
        };
    };
    // 删除
    rpc Del(ReqWithName) returns (google.protobuf.Empty) {
        option (asjard.api.http) = {
            delete : "/{name}"
        };
    };
}

message SearchReq {
    int32  page = 1;
    int32  size = 2;
    string sort = 3;
}

message CreateOrUpdateReq {
    string name = 2;
    uint32 age  = 3;
}

message ReqWithName { string name = 1; }

message ExampleInfo {
    int64  id         = 1;
    string name       = 2;
    uint32 age        = 3;
    string created_at = 4;
    string updated_at = 5;
}

message ExampleList {
    int32                total = 1;
    repeated ExampleInfo list  = 2;
}
